Hobbies are added, Picture Gallery is modified, created a Registration Form and Added some links to Contact Me Page

--- a/ContactMe.html
+++ b/ContactMe.html
@@ -9,21 +9,21 @@
     <body>
         
         <nav>
-            <a href="main.html">Home </a>
-            <a href="PictureGallery.html">Picture Gallery </a>
-            <a href="ContactMe.html">Contact Me </a>
-            <a href="MyHobbies.html">My Hobbies </a>
-            <a href="Registration.html">Register </a>
+            <a href="main.html">&#91;Home&#93; </a>
+            <a href="PictureGallery.html">&#91;Picture Gallery&#93; </a>
+            <a href="ContactMe.html">&#91;Contact Me&#93; </a>
+            <a href="MyHobbies.html">&#91;My Hobbies&#93; </a>
+            <a href="Registration.html">&#91;Register&#93; </a>
         </nav>
         <h1>Contact Me</h1>
         <br>
-            <form action="action.php" method="POST"><b>You Can Contact Me From Here</b><br><br>
-                <label for="name">Enter Your Name &#38 Surname: </label>
-                <input type="text" alt="Name&Surname" accept="text/plain" name="name" id="name"><br>
-                <label for="email">Enter Your E-mail Adress: </label><input type="email" alt="E-mail Adress" id="email"><br>
-                <textarea rows="5" cols="70" placeholder="Here you can text me whatever you want!"></textarea><br>
-                <input type="submit" alt="Enter" name="Enter" value="Enter">
-            </form>
+        <form action="action.php" method="POST"><b>You Can Contact Me From Here</b><br><br>
+            <label for="name">Enter Your Name &#38 Surname: </label>
+            <input type="text" alt="Name&Surname" accept="text/plain" name="name" id="name"><br>
+            <label for="email">Enter Your E-mail Adress: </label><input type="email" alt="E-mail Adress" id="email"><br>
+            <textarea rows="5" cols="70" placeholder="Here you can text me whatever you want!"></textarea><br>
+            <input type="submit" alt="Enter" name="Enter" value="Enter">
+        </form>
         <br>
         <fieldset>
             <legend>Contact Links</legend>
