--- a/main.html
+++ b/main.html
@@ -8,11 +8,11 @@
 
     <body>
         <nav>
-            <a href="main.html">Home</a>
-            <a href="PictureGallery.html">Picture Gallery</a>
-            <a href="ContactMe.html">Contact Me</a>
-            <a href="MyHobbies.html">My Hobbies</a>
-            <a href="Registration.html">Register</a>
+            <a href="main.html">&#91;Home&#93; </a>
+            <a href="PictureGallery.html">&#91;Picture Gallery&#93; </a>
+            <a href="ContactMe.html">&#91;Contact Me&#93; </a>
+            <a href="MyHobbies.html">&#91;My Hobbies&#93; </a>
+            <a href="Registration.html">&#91;Register&#93; </a>
         </nav>
         <h1>That Page is All About Myself!</h1>
         
