Written some bio about Myself

--- a/main.html
+++ b/main.html
@@ -16,5 +16,9 @@
         </nav>
         <h1>That Page is All About Myself!</h1>
         
+        <p>I am introducing myself as <b>&#39;&#39;Capable of Everything&#39;&#39;</b> which means exactly Open Minded.<br>
+        I have never restricted myself with some borders and always tried to accomplish my goals even with the hardest obstacles.<br>
+        Most of the time my Fearlessness in any difficulty strengthened me. Therefore, finding some reasons to escape from those challenges never works on me. If I focus on some missions those really worth of that labour, I will never give up.</p>
+        
     </body>
 </html>
